--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: #1a1a1a;
   background-color: #242424;
 
   font-synthesis: none;
@@ -98,6 +99,7 @@ button:focus-visible {
   flex-direction: column;
   align-items: center;
   width: 50%;
+  max-width: 1300px;
   height: 100%;
   background-color: white;
   border: solid 2px #9095f7;
